minor draft revisions 26 Jul 2018

--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -60,26 +60,26 @@
 \end{tabular}
 \end{center}
 
-A primary goal of this course is to introduce Bayesian statistics at an early stage to students with a reasonable mathematical background. As such, the range of topics is similar to an introductory statistics course for a technical audience with an emphasis on statistical inference. Along those lines, the course will describe Bayesian methods and show how they compare favorable to frequentist alternatives. Topics include Bayesian inference for discrete and continuous univariate random variables, multivariate normal, and linear regression. We will implement methods analytically and using software such as Minitab, R, and Stan.
+This course aims to introduce Bayesian statistics to students at an early stage, provided they have a reasonable mathematical background. As such, the range of topics is similar to an introductory statistics course for a technical audience with an emphasis on statistical inference. Along those lines, the course will describe Bayesian methods and show how they often compare favorable to frequentist alternatives. Topics include Bayesian inference for discrete and continuous univariate random variables, multivariate normal, and linear regression. We will implement methods analytically and using software such as Minitab, R, and Stan.
 
-The latter portions of the course focuses on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributios including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo. The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis to aid advanced and graduate students in their research projects. As such, the later topics may be challenging to those without experience in computer programming (although it is not required).
+The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis. This will serve advanced undergraduate and graduate students in their research projects. As such, the later topics may be challenging to those without experience in computer programming (although it is not formally required for the course).
 
 \section*{Catalog Description}
-Bayes Theorem; statistical inference; Bayesian data analysis; prior specification, conjugacy, posterior approximation; Markov Chain Monte Carlo (MCMC); Hamiltonian Monte Carlo; Bayesian regression; Multivariate Normal; nuisance parameters; sufficient statistics
+Bayes Theorem; statistical inference; Bayesian data analysis; prior specification; conjugacy; posterior approximation; Markov Chain Monte Carlo (MCMC); Hamiltonian Monte Carlo; Bayesian regression; Multivariate Normal; nuisance parameters; sufficient statistics
 
 \section*{Course Pre-requisites}
-STAT 352 or STAT 467/667 or with instructor approval. Enrollment in STAT 445/645 is a suggested preparation.
+STAT 352 or STAT 467/667 or with instructor approval. STAT 445/645 is a suggested preparation.
 
 \section*{400-level Student Learning Outcomes}
 \begin{description}
 \item[UG1] Students will be able to demonstrate understanding of the concepts that underlie Bayesian inference and compare the results to frequentist alternatives.
 \item[UG2] Students will be able to conduct Bayesian inference analytically and interpret the results.
-\item[UG3] Students will be able to perform a modern Bayesian analysis using professional statistical packages (e.g., \textsf{Minitab}, \textsf{R}, and \textsf{Stan}).
+\item[UG3] Students will be able to perform a Bayesian analysis using professional statistical packages (e.g., \textsf{Minitab}, \textsf{R}, and \textsf{Stan}).
 \end{description}
 
 \section*{600-level Student Learning Outcomes}
 \begin{description}
-\item[GRAD1] Students will be able to synthesize course concepts to apply Bayesian modeling techniques to real-world data to facilitate scientific inquiry.
+\item[GRAD1] Students will be able to synthesize course concepts to apply Bayesian modeling techniques to real-world data in the pursuit of scientific inquiry.
 \end{description}
 
 \section*{Required text}
@@ -87,7 +87,7 @@ STAT 352 or STAT 467/667 or with instructor approval. Enrollment in STAT 445/645
 Textbook website:\\~\url{https://www.wiley.com/en-us/Introduction+to+Bayesian+Statistics%2C+3rd+Edition-p-9781118091562}
 
 \section*{Assignments}
-Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be completed and submitted individually.
+Exercises will be assigned approximately weekly. You are encouraged to discuss assignments between each other and with instructor. However, the works must be completed and submitted individually.
 
 \section*{Exam policy} You will be allowed at one 8.5x11in page of handwritten (on both sides) notes for each midterm and three such pages for the final exam. If you believe that your grade for exam or assignment is incorrect, contact instructor at the office hours with a rational justification. All such requests must be submitted to instructor within one week after a grade is announced; late requests will not be granted. The final decision about new grade is made by the instructor. Please understand that everyone can make a mistake, and that mistakes can go both ways: higher or lower than original grade.
 
@@ -98,7 +98,7 @@ There will be two midterms, the first on Thursday, March 1, and the second on Th
 A comprehensive final examination will be held on May 15, 9:00am - 11:00am, AB 206.
 
 \section*{400/600 Students}
-As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due May 14 in class.
+As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams scoring will demand a higher standard of correctness and communication. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due May 14 in class.
 
 \section*{Makeup, Late Policy}
 Late assignments, exams, and projects will not be graded. Exceptions will be made when a student misses work due to documented (doctor's note) illness or other extraordinary situation, up to the discretion of the instructor. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
@@ -127,7 +127,7 @@ F&59 or below
 \end{tabular}
 \end{center}
 
-The instructor reserves the right to deviate from the above percentages in special cases, including borderline cases (generally this could be +/- 3\% points) may be given a + or − within the above intervals or increasing the letter grade.
+The instructor reserves the right to deviate from the above percentages in special cases, including assigning borderline cases (generally this could be +/- 3\% points) may be given a $+$ or $-$ within the above intervals or by increasing the letter grade.
 
 \section*{Diversity Statement}
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
