updated with Ania, re policy standards

--- a/proposal_files/400-600-questionaire-STAT446-656-Intro-To-Bayesian-Analysis.tex
+++ b/proposal_files/400-600-questionaire-STAT446-656-Intro-To-Bayesian-Analysis.tex
@@ -24,7 +24,7 @@
     urlcolor=blue,
 }
 
-\title{Introduction to Bayesian Analysis (STAT 446/646) \\ 400/600 cross-listed course questionnaire}
+\title{Introduction to Bayesian Statistics (STAT 446/646) \\ 400/600 cross-listed course questionnaire}
 \renewcommand{\familydefault}{\sfdefault}
 
 \begin{document}
@@ -44,7 +44,7 @@
 
 \item \emph{How will increased opportunities for independent study or for interaction with the instructor(s) be made available for graduate students?}
 
-  Graduate student assignments will require additional independent reading/study, and the instructor will make time available specifically for graduate students during office hours. 
+  Graduate student assignments will require additional independent reading/study, and the instructor will make time available specifically for graduate students during office hours.
   
 \item \emph{Discuss any synthesis experiences specifically for graduates?}
 
@@ -54,13 +54,18 @@
 
   The course syllabus discusses these aspects under the ``400/600 Students'' heading and by specifying a 600-level student learning outcome (\textsc{GRAD1}).
 
+%  The graduate students will work at a higher academic level as a result of the following measures: (i) Exposure to deeper level of material in homework exercises and exams, (ii) different grading criteria that emphasize the research component of the class, (iii) additional opportunities to interact with the instructor, and (iv) completion of a term project to apply and synthesize the course content.
+
+  
 \item \emph{Discuss how the work of graduate students will be evaluated differently from that of undergraduates by describing the criteria used in grading an undergraduate assignment versus those used in grading a graduate level assignment.}
 
   Midterms and exams will be graded more strictly with respect to conceptual understanding, correctness, and clarity of exposition. By this, we mean that technical errors will receive a greater point deduction and language must follow scientific writing best practices.
 
 \item \emph{How will graduates leave the course feeling that they have obtained greater academic value?}
 
-The graduate students will feel that they obtained greater academic value as a result of the following measures: (i) Exposure to deeper level of material in homework exercises and exams, (ii) different grading criteria that emphasize the research component of the class, (iii) additional opportunities to interact with the instructor, and (iv) completion of a term project to apply and synthesize the course content.
+  %The graduate students will feel that they obtained greater academic value as a result of the following measures: (i) Exposure to deeper level of material in homework exercises and exams, (ii) different grading criteria that emphasize the research component of the class, (iii) additional opportunities to interact with the instructor, and (iv) completion of a term project to apply and synthesize the course content.
+
+  The graduate students will feel that they obtained greater academic value as a result of the deeper conceptual and analytic mastery obtained from completing more exercises and of greater difficulty. Further, the project will provide an authentic learning experience that could provide a direct contribution to their fields of interest.
   
 \end{enumerate}
 
