--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -65,7 +65,7 @@ This course aims to introduce Bayesian statistics to students at an early stage,
 The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis. This will serve advanced undergraduate and graduate students in their research projects. As such, the later topics may be challenging to those without experience in computer programming (although it is not formally required for the course).
 
 \section*{Catalog Description}
-Bayes Theorem; statistical inference; Bayesian data analysis; prior specification; conjugacy; posterior approximation; Markov Chain Monte Carlo (MCMC); Hamiltonian Monte Carlo; Bayesian regression; Multivariate Normal; nuisance parameters; sufficient statistics
+Statistical inference using Bayes' Theorem. Topics include posterior analysis for continuous and discrete random variables, prior specification, Bayesian regression, multivariate inference, and posterior sampling through Markov Chain Monte Carlo.
 
 \section*{Course Pre-requisites}
 STAT 352 or STAT 467/667 or with instructor approval. STAT 445/645 is a suggested preparation.
@@ -78,6 +78,7 @@ STAT 352 or STAT 467/667 or with instructor approval. STAT 445/645 is a suggeste
 \end{description}
 
 \section*{600-level Student Learning Outcomes}
+In addition to the above 400-level outcomes, graduate students will:
 \begin{description}
 \item[GRAD1] Students will be able to synthesize course concepts to apply Bayesian modeling techniques to real-world data in the pursuit of scientific inquiry.
 \end{description}
@@ -133,20 +134,20 @@ The instructor reserves the right to deviate from the above percentages in speci
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
 
 \section*{Disability Statement}
-The Department of Mathematics and Statistics supports providing equal access for students with disabilities. Any student with a disability needing academic adjustments or accommodations is requested to speak with me or the Disability Resource Center (PSAC 230, \url{http:www.unr.edu/drc}) as soon as possible to arrange for appropriate accommodations.
+Any student with a disability needing academic adjustments or accommodations is requested to speak with the \href{http:www.unr.edu/drc}{Disability Resource Center} as soon as possible to arrange for appropriate accommodations.
 
 \section*{Academic Conduct}
 No laptops, cell phones, mp3 players, or other electronics are to be used for personal reasons in class. If you are being disruptive during class you will be asked to leave. Disruptions in this context include inadequate participation. You must come to class on time and stay until the end of lecture. Tardy students will not be admitted to class. Please visit \url{http:www.unr.edu/student-conduct} for our official student code of conduct.
 
 \section*{Academic Success Services}
-A common habit among successful students is to seek help outside of the classroom. Your student fees cover use of the Math Center (784-4433 or \url{http:www.unr.edu/mathcenter}), Tutoring Center (784-6801 or \url{http:www.unr.edu/tutoring-center}), and University Writing Center (784-6030 or \url{http:www.unr.edu/writing-center}). These centers support your classroom learning; it is your responsibility to take advantage of their services.
+Your student fees cover usage of the University Math Center, University Tutoring Center, and University Writing Center. These centers support your classroom learning; it is your responsibility to take advantage of their services. Keep in mind that seeking help outside of class is the sign of a responsible and successful student
 
 \newpage
 \section*{University Recording Policy}
 Surreptitious or covert videotaping of class or unauthorized audio recording of class is prohibited by law and by Board of Regents policy. This class may be videotaped or audio recorded only with the written permission of the instructor. In order to accommodate students with disabilities, some students may have been given permission to record class lectures and discussions. Therefore, students should understand that their comments during class may be recorded.
 
 \section*{Academic Dishonesty}
-Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. For more details, see the University of Nevada, Reno general catalog.
+Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. See the University Academic Standards policy: \href{https://www.unr.edu/administrative-manual/6000-6999-curricula-teaching-research/instruction-research-procedures/6502-academic-standards}{UAM 6,502}.
 
 
 %% in my own book schedule, I'd introduce sampling posterior much earlier
