added religious holiday missed work allowance

--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -102,7 +102,7 @@ A comprehensive final examination will be held on May 15, 9:00am - 11:00am, AB 2
 As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams scoring will demand a higher standard of correctness and communication. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due May 14 in class.
 
 \section*{Makeup, Late Policy}
-Late assignments, exams, and projects will not be graded. Exceptions will be made when a student misses work due to documented (doctor's note) illness or other extraordinary situation, up to the discretion of the instructor. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
+Late assignments, exams, and projects will not be graded. Exceptions will be made when a student misses work due to a documented (doctor's note) illness or an extraordinary situation (up to the discretion of the instructor). There will be no early or make-up exams. However, if you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
 
 \clearpage
 \section*{Grading}
