--- a/Intro-to-Bayesian-Statistics_learning_outcomes.tex
+++ b/Intro-to-Bayesian-Statistics_learning_outcomes.tex
@@ -75,27 +75,35 @@ Statistical inference using Bayes’ Theorem. Topics include Bayesian/frequentis
 \item[GRAD1] Students will be able to synthesize course concepts to apply Bayesian modeling techniques to real-world data in the pursuit of scientific inquiry.
 \end{description}
 
-\section*{Course outcomes}
+\section*{Learning outcomes}
 
 Students will be able to $\ldots$
 
 \begin{enumerate}
-  \itemsep0em 
-\item explain the role of statistics in science using sampling theory.
-\item describe and summarize data numerically and visually.
-\item apply probability theory to analyze uncertainty in real world problems.
-\item model parameters and data using discrete random variables.
-\item conduct Bayesian inference for parameters of discrete random variables.
-\item model parameters and data using continuous random variables.
-\item conduct Bayesian inference for a binomial proportion.
-\item compare Frequentist/Bayes approaches for inferring a binomial proportion.
-\item conduct Bayesian inference for a Normal mean parameter.
-\item compare Frequentist/Bayes approaches for inferring a Normal mean parameter.
-\item estimate parameters in a Bayesian linear regression.
-\item conduct Bayesian inference for a Normal variance parameter.
-\item will apply robust Bayes methods for prior misspecification.
-\item conduct Bayesian inference for parameters in a multivariate Normal.
-\item use Markov Chain Monte Carlo (MCMC) to sample from posterior distributions.
+  \itemsep0em
+
+  %% The changes below reflect an attempt to get to 5 - 7 core SLOs.
+%% \item explain the role of statistics in science using sampling theory.
+%% \item describe and summarize data numerically and visually.
+%% \item apply probability theory to analyze uncertainty in real world problems.
+%% \item model parameters and data using discrete random variables.
+%% \item conduct Bayesian inference for parameters of discrete random variables.
+%% \item model parameters and data using continuous random variables.
+%% \item conduct Bayesian inference for parameters of continuous random variables.
+\item model parameters and data using discrete and continuous random variables.
+\item conduct Bayesian inference for parameters of discrete and continuous random variables.
+%% \item conduct Bayesian inference for a binomial proportion.
+%% \item compare Frequentist/Bayes approaches for inferring a binomial proportion.
+%% \item conduct Bayesian inference for a Normal mean parameter.
+%% \item compare Frequentist/Bayes approaches for inferring a Normal mean parameter.
+\item conduct Bayesian inference parameters in linear regression.
+%% \item conduct Bayesian inference for a Normal variance parameter.
+%% \item will apply robust Bayes methods for prior misspecification.
+%% \item conduct Bayesian inference for parameters in a multivariate Normal.
+\item apply computational techniques to conduct Bayesian inference, including Markov Chain Monte Carlo.
+\item compare Frequentist/Bayesian approaches in statistical inference.
+\item develop a Bayesian model for real world data.
+
 \end{enumerate}
 
 
