--- a/Intro-to-Bayesian-Statistics_learning_outcomes.tex
+++ b/Intro-to-Bayesian-Statistics_learning_outcomes.tex
@@ -90,6 +90,7 @@ Students will be able to $\ldots$
 %% \item conduct Bayesian inference for parameters of discrete random variables.
 %% \item model parameters and data using continuous random variables.
 %% \item conduct Bayesian inference for parameters of continuous random variables.
+  \item recall the axioms, basic terms/algebra of probability, including Bayes' Theorem.
 \item model parameters and data using discrete and continuous random variables.
 \item conduct Bayesian inference for parameters of discrete and continuous random variables.
 %% \item conduct Bayesian inference for a binomial proportion.
@@ -102,7 +103,7 @@ Students will be able to $\ldots$
 %% \item conduct Bayesian inference for parameters in a multivariate Normal.
 \item apply computational techniques to conduct Bayesian inference, including Markov Chain Monte Carlo.
 \item compare Frequentist/Bayesian approaches in statistical inference.
-\item develop a Bayesian model for real world data.
+\item develop and evaluate a Bayesian model for real world data.
 
 \end{enumerate}
 
