--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -60,9 +60,9 @@
 \end{tabular}
 \end{center}
 
-This course aims to introduce Bayesian statistics to students at an early stage, provided they have a reasonable mathematical background. As such, the range of topics is similar to an introductory statistics course for a technical audience with an emphasis on statistical inference. Along those lines, the course will describe Bayesian methods and show how they often compare favorable to frequentist alternatives. Topics include Bayesian inference for discrete and continuous univariate random variables, multivariate normal, and linear regression. We will implement methods analytically and using software such as Minitab, R, and Stan.
+This course introduces Bayesian statistics to a technical audience. Early on, we focus on the logic behind Bayesian statistics, including the mathematical formalization of updating beliefs under uncertainty. Then we describe Bayesian methods for well-known probability models and compare these methods to classical (frequentist) alternatives. Topics include Bayes' Theorem, prior specification, Bayesian inference for discrete and continuous univariate random variables, and linear regression. We'll implement methods analytically and using software such as Minitab, R, and Stan.
 
-The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis. This will serve advanced undergraduate and graduate students in their research projects. As such, the later topics may be challenging to those without experience in computer programming (although it is not formally required for the course).
+The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis. 
 
 \section*{Catalog Description}
 Statistical inference using Bayes' Theorem. Topics include posterior analysis for continuous and discrete random variables, prior specification, Bayesian regression, multivariate inference, and posterior sampling through Markov Chain Monte Carlo.
@@ -88,47 +88,59 @@ In addition to the above 400-level outcomes, graduate students will:
 Textbook website:\\~\url{https://www.wiley.com/en-us/Introduction+to+Bayesian+Statistics%2C+3rd+Edition-p-9781118091562}
 
 \section*{Assignments}
-Exercises will be assigned approximately weekly. You are encouraged to discuss assignments between each other and with instructor. However, the works must be completed and submitted individually.
-
-\section*{Exam policy} You will be allowed at one 8.5x11in page of handwritten (on both sides) notes for each midterm and three such pages for the final exam. If you believe that your grade for exam or assignment is incorrect, contact instructor at the office hours with a rational justification. All such requests must be submitted to instructor within one week after a grade is announced; late requests will not be granted. The final decision about new grade is made by the instructor. Please understand that everyone can make a mistake, and that mistakes can go both ways: higher or lower than original grade.
+Exercises will be assigned approximately weekly. You are encouraged to discuss assignments between each other and with instructor. However, the assignment must be completed and submitted individually. 
 
 \section*{Midterms}
-There will be two midterms, the first on Thursday, March 1, and the second on Thursday, April 12.
+There will be four midterms, the first on Wednesday, February 13, the second on Wednesday, March 13, the third on Wednesday, April 10, and the fourth on Wednesday, May 1.
 
 \section*{Final exam}
-A comprehensive final examination will be held on May 15, 9:00am - 11:00am, AB 206.
+Due to the computational complexity involved in latter topics, the final exam will be take home.
+
+\section*{Exam policy} You will be allowed at one 8.5x11in page of handwritten (on both sides) notes for the first midterm. And one additional page of notes for each following midterm (four total pages). If you believe that your grade for exam or assignment is incorrect, contact instructor at the office hours with a rational justification. All such requests must be submitted to instructor within one week after a grade is announced; late requests will not be granted. Please understand that everyone can make a mistake, and that mistakes can go both ways: higher or lower than original grade.
 
 \section*{400/600 Students}
-As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams scoring will demand a higher standard of correctness and communication. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due May 14 in class.
+As indicated above, the student learning outcomes differ at the 400 and 600 levels. 600-level students must complete a \textbf{term project} in addition to all 400-level requirements.
 
 \section*{Makeup, Late Policy}
-Late assignments, exams, and projects will not be graded. Exceptions will be made when a student misses work due to a documented (doctor's note) illness or an extraordinary situation (up to the discretion of the instructor). There will be no early or make-up exams. However, if you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
+Late assignments, exams, and projects will not be graded. Exceptions will be made when a student misses work due to a documented (doctor's note) illness or an extraordinary situation (up to the discretion of the instructor). There will be no early or make-up exams. However, if you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, \textbf{I'll drop your lowest two grades in the ``Assignments'' category and your lowest ``Midterm Exam'' grade to give a more realistic description of your performance.}
 
 \clearpage
 \section*{Grading}
-The final grades will be determined using the following percentages:
 
-\begin{center}
-\begin{tabular}{cc}
-\begin{tabular}{l|c|r}	%For grade items (quizzes, homework, etc.)
+We'll use a point system to evaluate student learning. There are four categories of assignments. Table \ref{tab:points} shows the total points possible within each category before dropping any low scores.
+
+\begin{table}[h]
+  \begin{center}
+  \begin{tabular}{l|c|c}	%For grade items (quizzes, homework, etc.)
 Item&400-level& 600-level\\\hline\hline
-  Assignments&40\% & 40\%\\
-  Midterm Exams&40\%& 20\%\\
-  Final Exam&20\%& 20\%\\
-  Term project &-- &20\%\\
-\end{tabular}
-&
-\begin{tabular}{ll}
-A&90-100\\
-B&80-89\\
-C&70-79\\
-D&60-69\\
-F&59 or below
-\end{tabular}
-\end{tabular}
+  Assignments& 300 & 300\\
+  Midterm Exams& 200 & 200\\
+  Final Exam& 150 & 150\\
+  Term project &-- & 150 \\
+  \end{tabular}
+  \caption{Total points available within each assignment category. \label{tab:points}}
 \end{center}
 
-The instructor reserves the right to deviate from the above percentages in special cases, including assigning borderline cases (generally this could be +/- 3\% points) may be given a $+$ or $-$ within the above intervals or by increasing the letter grade.
+\end{table}
+
+The sum of all points earned determine the final letter grades. 
+
+\begin{table}[h]
+\begin{center}
+  \begin{tabular}{r|l|l}
+    Letter grade &400-level& 600-level\\\hline\hline
+A&504 or above&639 or above\\
+B&448 to 503&568 to 638\\
+C&392 to 447&497 to 567\\
+D&336 to 391&426 to 496\\
+F&335 or below&425 or below
+  \end{tabular}
+  \caption{Conversion table between points and letter grades, after dropping the two lowest ``Assignments'' grades and lowest ``Midterm Exam'' grade.}
+\end{center}
+      \label{tab:grade}
+\end{table}
+
+The instructor reserves the right to deviate from the above thresholds, including assigning borderline cases $+$ or $-$.
 
 \section*{Diversity Statement}
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
@@ -142,7 +154,6 @@ No laptops, cell phones, mp3 players, or other electronics are to be used for pe
 \section*{Academic Success Services}
 Your student fees cover usage of the University Math Center, University Tutoring Center, and University Writing Center. These centers support your classroom learning; it is your responsibility to take advantage of their services. Keep in mind that seeking help outside of class is the sign of a responsible and successful student
 
-\newpage
 \section*{University Recording Policy}
 Surreptitious or covert videotaping of class or unauthorized audio recording of class is prohibited by law and by Board of Regents policy. This class may be videotaped or audio recorded only with the written permission of the instructor. In order to accommodate students with disabilities, some students may have been given permission to record class lectures and discussions. Therefore, students should understand that their comments during class may be recorded.
 
@@ -153,41 +164,41 @@ Cheating, plagiarism, or otherwise obtaining grades under false pretenses consti
 \begin{center}
   \begin{tabular}{|c|c|c|c|}
     \hline
-    Week & Topic1 & Topic2 & Notes \\
+    Week & Monday & Wednesday & Notes \\
     \hline
-    1 & Syllabus/expectations & Statistical science review & Ch.1,2 \\
+    1 & MLK Day & Why Bayes?/Syllabus/expectations & Ch.1-3\\
     \hline
-    2 & Summarizing data & Logic, probability, uncertainty & Ch.3,4 \\
+    2 & Probability & Probability & Ch.4 \\
     \hline
-    3 & Discrete random variables & Inference for discrete random variables & Ch.5,6 \\
+    3 & Discrete random variables & Discrete RVs & Ch.5,6 \\ \\
     \hline
-    4 & Continuous random variables & Inference for binomial proportion & Ch.7,8 \\
+    4 & Discrete RVs& \textbf{Midterm 1} & Ch.5,6 \\ \\
     \hline
-    5 & Frequentist/Bayes comparison for proportion & Inference for Poisson & Ch.9,10 \\
+    5 & Continuous RVs & Continuous RVs & Ch.7-10 \\
     \hline
-    6 & Review session & \textbf{Midterm 1} & \\
+    6 & Review session & President's Day & \\
     \hline
-    7 & Inference for Normal mean & Frequentist/Bayes comparison for mean & Ch.11,12 \\
+    7 & Continuous RVs & Continuous RVs & Ch.7-10 \\
     \hline
-    8 & Inference for difference in means & con'd & Ch.13 \\
+    8 & Continuous RVs & \textbf{Midterm 2} & Ch.7-10 \\
     \hline
     9 & -- & -- & Spring break  \\
     \hline
-    10 & Bayesian Simple Linear Regression & con'd & Ch.14 \\
+    10 & Continuous RVs II & Continuous RVs II & Ch.11,12,13 \\
     \hline
-    11 & Inference for Standard Deviation & Robust methods & Ch.15,16 \\
+    11 & Continuous RVs II & Continuous RVs II & Ch.11,12,13 \\
     \hline
-    12 & Review session & \textbf{Midterm 2} & \\
+    12 & Continuous RVs II & \textbf{Midterm 3} & \\
     \hline
-    13 & Inference Normal unknown mean and variance & con'd & Ch.17 \\
+    13 & Simple linear regression & Simple linear regression & Ch.14 \\
     \hline
-    14 & Inference Multivariate Normal & con'd & Ch.18\\
+    14 & Computing/MCMC & Computing/MCMC & Ch.20\\
     \hline
-    15 & Bayesian Multiple Linear Regression & con'd & Ch.19\\
+    15 & Computing/MCMC & \textbf{Midterm 4} & Ch.20\\
     \hline
-    16 & Bayes Computation/MCMC & HMC/Stan & Ch.20 \\
+    16 & Student talks & Prep Day &  \\
     \hline
-    17 & \textbf{Final exam} & & \\
+    17 & \textbf{Take-home final exam} & & \\
     \hline
 \end{tabular}
 \end{center}
