add percentages to Table on letter grade

--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -123,24 +123,24 @@ Item&400-level& 600-level\\\hline\hline
 
 \end{table}
 
-The sum of all points earned determine the final letter grades. 
+The sum of all points earned determine the final letter grades, according to the thresholds listed in Table \ref{tab:grade}.
 
 \begin{table}[h]
 \begin{center}
   \begin{tabular}{r|l|l}
     Letter grade &400-level& 600-level\\\hline\hline
-A&504 or above&639 or above\\
-B&448 to 503&568 to 638\\
-C&392 to 447&497 to 567\\
-D&336 to 391&426 to 496\\
-F&335 or below&425 or below
+A ($\geq 90\%$)&504 or above&639 or above\\
+B ($\geq 80\%$)&448 to 503&568 to 638\\
+C ($\geq 70\%$)&392 to 447&497 to 567\\
+D ($\geq 60\%$)&336 to 391&426 to 496\\
+F ($< 60\%$)&335 or below&425 or below
   \end{tabular}
-  \caption{Conversion table between points and letter grades, after dropping the two lowest ``Assignments'' grades and lowest ``Midterm Exam'' grade.}
+  \caption{Conversion table between points and letter grades, after dropping the two lowest ``Assignments'' grades and lowest ``Midterm Exam'' grade.\label{tab:grade}}
 \end{center}
-      \label{tab:grade}
+
 \end{table}
 
-The instructor reserves the right to deviate from the above thresholds, including assigning borderline cases $+$ or $-$.
+The instructor reserves the right to deviate from the above thresholds, including assigning $+$ or $-$.
 
 \section*{Diversity Statement}
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
